--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ lib_deps =
 monitor_speed = 115200
 framework = arduino
 build_flags = 
-	-DWIFI_CREDS_SSID='"LPDR_Home_Automation"'
-	-DWIFI_CREDS_PASSWD='"50058556"'
+	-DWIFI_CREDS_SSID='"VodafoneGGAlly"'
+	-DWIFI_CREDS_PASSWD='"Lapasswordnonteladicopercheesegreta!"'
 	
 	-O2
 build_unflags = -Os
@@ -23,4 +23,4 @@ build_unflags = -Os
 [env:esp12e]
 platform = espressif8266
 board = esp12e
-lib_deps = alexgyver/GyverOLED@^1.3.2
+lib_deps = GyverLibs/GyverOLED@^1.3.2
